# PGR-MultiAgents

./: .env.beta  .gitignore  Dockerfile  Makefile  requirements.txt
chroma_hnswlib-0.7.3.dist-info/: RECORD
pcmsoanalystflow/: .gitignore  README.md  pyproject.toml
pcmsoanalystflow/src/pcmsoanalystflow/: main.py
pcmsoanalystflow/src/pcmsoanalystflow/crews/agentmodelcrew/: agentmodelcrew_crew.py
pcmsoanalystflow/src/pcmsoanalystflow/crews/agentmodelcrew/config/: agents.yaml  tasks.yaml
pcmsoanalystflow/src/pcmsoanalystflow/crews/examextractcrew/: examextractcrew_crew.py
pcmsoanalystflow/src/pcmsoanalystflow/crews/examextractcrew/config/: tasks.yaml
pcmsoanalystflow/src/pcmsoanalystflow/crews/gheanalystcrew/: gheanalystcrew_crew.py
pcmsoanalystflow/src/pcmsoanalystflow/crews/gheanalystcrew/config/: tasks.yaml
pcmsoanalystflow/src/pcmsoanalystflow/crews/gheextractcrew/: gheextractcrew_crew.py
pcmsoanalystflow/src/pcmsoanalystflow/tools/: custom_tool.py
pgr_analyst/: .gitignore  README.md  ghe.md  pgr_analyst.pkl  pyproject.toml  report.md  risk.md  select.md  training_data.pkl
pgr_analyst/imgs/: convert.py
pgr_analyst/output/: 10.md  ghe.md  pgr_expert.md  risk.md  risk_description.md
pgr_analyst/path/: pgr3.json
pgr_analyst/src/pgr_analyst/: crew.py  main.py
pgr_analyst/src/pgr_analyst/config/: agents.yaml  tasks.yaml
pgr_analyst/src/pgr_analyst/tools/: custom_tool.py
pgranalystflow/: .gitignore  Dockerfile  README.md  crewai_flow.html  pyproject.toml  requirements.txt
pgranalystflow/output/: ghe.md  (+7 more)
src/: app.py  config.py  dynadok.py
(+37 files in other folders)
