[project]
name = "pcmsoanalystflow"
version = "0.1.0"
description = "pcmsoanalystflow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.79.4,<1.0.0",
]

[project.scripts]
kickoff = "pcmsoanalystflow.main:kickoff"
plot = "pcmsoanalystflow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
