[project]
name = "pgr_analyst"
version = "0.1.0"
description = "PGR-Analyst using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.9,<1.0.0"
]

[project.scripts]
pgr_analyst = "pgr_analyst.main:run"
run_crew = "pgr_analyst.main:run"
train = "pgr_analyst.main:train"
replay = "pgr_analyst.main:replay"
test = "pgr_analyst.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
